Restore vlan_ioctl overwritten by ether_ifdetach in vlan_unconfig

This fixes PR 49112.